add login controller
