# internal/application/user/controller.go
@@ -27,12 +27,12 @@ func NewUserController(service *domain.UserService, logger pkg.Logger) *UserCont
 // @Tags auth
 // @Accept	json
 // @Produce json
-// @Param request body	domain.UserRegisterRequest true	"User registration request"
+// @Param request body	UserRegisterRequest true "User registration request"
 // @Success 200 {object} map[string]string	"Successful registration"
 // @Failure 400 {object} map[string]string	"Invalid request or validation error"
 // @Router	/api/v1/user/register [post]
 func (controller *UserController) Register(ctx *gin.Context) {
-	var req *domain.UserRegisterRequest
+	var req *UserRegisterRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
 		controller.logger.Error(err)
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -40,7 +40,7 @@ func (controller *UserController) Register(ctx *gin.Context) {
 		return
 	}
 
-	err := controller.service.Register(req)
+	err := controller.service.Register(req.Username, req.Password, req.Email)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 
